# openapimcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  specli.settings.json  test-cli.sh
.claude/: settings.local.json
.claude/commands/: docs.md  implement.md  plan.md
.claude/commands/specs/: breakdown.md  functional.md  refactor.md  technical.md
docs/: 001-Project init.md  breakdown-openapi-mcp-cli.md
specs/: PLAN-001-development-tooling-setup.md  PLAN-002-cli-package-foundation.md  PLAN-003-github-actions-ci-pipeline.md  SPEC-001-development-tooling-setup.md  SPEC-002-cli-package-foundation.md  SPEC-003-github-actions-ci-pipeline.md
src/openapimcp/: __init__.py  cli.py  main.py
tests/: test_command_integration.py  test_dependency_management.py  test_formatting.py  test_linting.py  test_precommit.py  test_pytest_framework.py  test_utils.py
